# gjk

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp
app/enginedemo/: CMakeLists.txt  LoadWorld.cpp  LoadWorld.h  Preset.cpp  Preset.h  WorldReader.cpp  WorldReader.h  main.cpp
app/gjkdemo/: CMakeLists.txt  Shape.cpp  Shape.h  Window.cpp  Window.h  WindowShapePoint.cpp  WindowShapePoint.h  WindowShapeShape.cpp  WindowShapeShape.h  main.cpp
config/: collisions_and_pendulum.json  cubes_falling_and_bouncing.json  joints.json  to_be_converted.cpp
engine_I/: README.md  TODO.md
engine_I/app/: CMakeLists.txt
engine_I/app/gjkdemo/: CMakeLists.txt  Shape.h  WindowShapePoint.h  WindowShapeShape.cpp  WindowShapeShape.h  main.cpp
engine_I/config/: joints.json  some_balls.json  three_balls_colliding.json  two_spheres_fall_bounce_and_collide.json
engine_I/src/engine/: BodyCollisionEstimator.cpp  BodyInstance.cpp  BodyModel.h  CMakeLists.txt  Collision.cpp  Engine.h  Link.cpp  Solver.h  UnionFind.h  World.h  WorldJson.cpp
engine_I/src/gjk/: GJK.cpp  GJK.h
engine_I/src/ui/: MainWindow.cpp  MainWindow.h  ViewerWidget.cpp
engine_I/tst/: CMakeLists.txt  testEngine.cpp  testEngine.h  testGJK.h
engine_II/cad/: grande_roue.FCStd  rotule.FCStd
engine_II/cad/mesh/: nacelle.stl  roue.stl  support.stl
engine_II/code/: CMakeLists.txt
engine_II/code/src/: CMakeLists.txt
engine_II/code/src/engine/: ArticulatedBody.cpp  ArticulatedBody.h  ArticulatedSystem.cpp  ArticulatedSystem.h  Body.cpp  Body.h  BodyModel.cpp  BodyModel.h  CMakeLists.txt  CylindricalJoint3.cpp  CylindricalJoint3.h  FixedJoint.cpp  FixedJoint.h  FreeJoint.cpp  FreeJoint.h  HingeJoint3.cpp  HingeJoint3.h  Joint.cpp  Joint.h  Link.cpp  Link.h  LinkedBody.cpp  LinkedBody.h  MechanicalSystem.cpp  MechanicalSystem.h  Pose.cpp  Pose.h  PrismaticJoint3.cpp  PrismaticJoint3.h  Solver.cpp  Solver.h  Velocity.cpp  Velocity.h
engine_II/latex/: ode.tex
src/: Body.cpp  Body.h  BodyInstance.cpp  BodyInstance.h  BodyModel.cpp  BodyModel.h  BodyState.h  CMakeLists.txt  Cluster.cpp  Collision.cpp  Collision.h  GJK.cpp  GJK.h  GJK2.cpp  GJK2.h  MainWindow.cpp  MainWindow.h  Solver.cpp  Solver.h  Spring.cpp  Spring.h  ViewerWidget.cpp  ViewerWidget.h  World.cpp  World.h  gjk.h  main.cpp
src/engine/: BodyCollisionEstimator.cpp  BodyCollisionEstimator.h  BodyInstance.cpp  BodyInstance.h  BodyModel.cpp  BodyModel.h  BodyState.h  CMakeLists.txt  Cluster.cpp  Cluster.h  Collision.cpp  Collision.h  Engine.cpp  Link.cpp  Link.h  PhysicalConstants.h  Solver.cpp  Solver.h  UnionFind.cpp  Utils.cpp  Utils.h  World.cpp  World.h
src/gjk/: CMakeLists.txt
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ViewerWidget.cpp  ViewerWidget.h
tst/: CMakeLists.txt  testGJK.cpp  testGJK.h  tests.cpp
